Fixed how the background image looks on smaller devices.

--- a/styles.css
+++ b/styles.css
@@ -56,8 +56,9 @@ button:hover {
 }
 
 body {
-    background: url("images/HadesScreenshot.png");
+    background: url("images/HadesScreenshot.png") no-repeat center;
     background-size: cover;
+    height: 100vh;
 }
 
 h1 {
